--- a/index.html
+++ b/index.html
@@ -3,30 +3,27 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - A Pen by  Shubham Bhagwat</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
-<link type="text/css" rel="style" href="style.css"/> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+  <link type="text/css" rel="style" href="styles.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/css/jasny-bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<!doctype html>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css"/>
 <html>
+<html lang ="en">;
   <head>
+    <meta charset ="UTF-8">
     <title> Online Photo filter</title>
+    <h1>Online Photo Filter Applier and Photo Hider</h1>
     <link type="text/css" rel="stylesheet" href="style.css"> 
-    <script src = "https://www.dukelearntoprogram.com//course1/common/js/cs101/SimpleImage.js"></script>
-    <h3> Online Photo Filter Applier and Photo Hider</h3>
   </head>
   <body>
-    <div>
+    <scrpit src ="https://www.dukelearntoprogram.com//course1/conmon/js/cs101/SimpleImage.js"></script>
     <div class = "intro">
       <b>Hello everyone.</b> This is an Online photo filter applier and photo hider webpage. Using this webpage you can apply filters such as blurring, red scale, rainbow filter, and many other predesigned filters. Also this webpage comes with an online GreenScreen converter using which you can convert your greenscreen images to a different image with a different background. The webpage also includes a Photo hider which uses the principal of steganography to hide images within other images. So let's get started.
       </div>
      <div> <canvas Id = "can" class ="megaevolve2">
-      </canvas></p1>
+      </canvas>
     </div>
     <div Id = "megaevolve">
       <input type = "Button" value = "Mega Evolve" onclick = "megaEvolve()" > 
@@ -39,7 +36,7 @@
         <img src = 'https://www.dukelearntoprogram.com//course1/example/drewRobert.png' width = "400px" height = "200px" Id ="withoutGS">
         <img src ='https://www.dukelearntoprogram.com//course1/example/drewRobertDinos.png' width = "400px" height = "200px" Id = "withGS"
     </div>
-    <div >
+    <div>
       <canvas Id = "greenbgcan">
       </canvas>
       <canvas Id = "greenfgcan">
