--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title> Online Photo filter</title>
-  <h1> Online Photo Filter Applier and Photo Hider</h>
+  <h1> Online Photo Filter Applier and Photo Hider</h1>
   <link type="text/css" rel="style" href="styles.css"> <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/4.0.0/css/jasny-bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 
