--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
   <body>
     <scrpit src ="https://www.dukelearntoprogram.com//course1/conmon/js/cs101/SimpleImage.js"></script>
-    <h1 style = "color:cyan;"> Online Photo Filter Applier and Photo Hider</h1>
+    <h1> Online Photo Filter Applier and Photo Hider</h1>
+    <style>
+      h1{color:cyan;
+      }
+    </style>
     <div class = "intro">
       <b>Hello everyone.</b> This is an Online photo filter applier and photo hider webpage. Using this webpage you can apply filters such as blurring, red scale, rainbow filter, and many other predesigned filters. Also this webpage comes with an online GreenScreen converter using which you can convert your greenscreen images to a different image with a different background. The webpage also includes a Photo hider which uses the principal of steganography to hide images within other images. So let's get started.
       </div>
