--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1> Online Photo Filter Applier and Photo Hider</h1>
     <style>
       h1{color:cyan;
+        text-align: center;
       }
     </style>
     <div class = "intro">
