--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
       </body>
       </html>
 <!-- partial -->
-  <scrpit src ="https://www.dukelearntoprogram.com//course1/conmon/js/cs101/SimpleImage.js"></script>
+  <script src ="https://www.dukelearntoprogram.com//course1/conmon/js/cs101/SimpleImage.js">
+    alert('This alert box was called with the onload event');</script>
   <script  src="./script.js"></script>
 
 </body>
